fix display of company logos on mobile

--- a/styles.css
+++ b/styles.css
@@ -342,7 +342,6 @@ label[for="menu-toggle"]  {
     display: block;
     position: absolute;
     right: 0;
-    margin-right: 1em;
     color: white;
     font-size: 42px;
     font-weight: 500;
@@ -473,15 +472,22 @@ label[for="menu-toggle"]  {
 
   /* reposition title video for mobile */
   .latestvideo {
-    margin: 0.5em 0 2em;
+    margin: 0.5em 0 0;
     width: 100%;
     border: none;
   }
 
   /* change link images on mobile */
   .links {
-    margin: 3em 2em 2em;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 2em auto;
     width: auto;
+  }
+
+  .links img {
+    padding: 0;
+    max-height: 100px;
   }
 
   /* footer */
